--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,4 @@
-<div class="container">
-  <app-header></app-header>
-  <div class="container-lg pt-5 px-0">
-    <div class="row">
-      <div class="col-md-8">
-        <app-job-service></app-job-service>
-      </div>
-      <div class="col-md-4">
-        <app-new-job-service></app-new-job-service>
-      </div>
-    </div>
-  </div>
-</div>
+<app-header></app-header>
+<div class="container-lg pt-5 px-0">
+  <router-outlet></router-outlet>
+</div>  
